--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -490,6 +490,10 @@
     <view class="h4">{{food.ingredients}}</view>
 </view>
 
+<button bindtap='notationMethod' class='btn-informations'>Notation Method</button>
+
+
+
 
 
 
