--- a/pages/favorite/favorite.wxml
+++ b/pages/favorite/favorite.wxml
@@ -28,8 +28,7 @@
 
 
 <view id='card-dual' class="card-dual">
-<view wx:for="{{favorites}}" wx:for-item="favorite" wx:key="favorite.id" bindtap="showFav" data-favorite-id= "{{favorite.id}}">
-
+<view wx:for="{{favorites}}" wx:for-item="favorite" wx:key="favorite.id" bindtap="showFav" data-favorite-id= "{{favorite.food_id}}">
    <!-- <view class="delete">
         <image src="/images/recycling_bin.png" class="del_icon" bindtap="del_bindtap" data-id="{{favorite.favorite_id}}"></image>
         </view> -->
